--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "emailjs-com": "^3.2.0",
     "icons": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
